fixed news title and summary

--- a/mission_to_mars/templates/index.html
+++ b/mission_to_mars/templates/index.html
@@ -24,8 +24,8 @@
                 <div class="col-md-12">
                     <h1>Latest Mars News</h1>
                     <hr>
-                    <h2>NASA's Perseverance Rover Mission Getting in Shape for Launch</h2>
-                    <p>Stacking spacecraft components on top of each other is one of the final assembly steps before a mission launches to the Red Planet.</p>
+                    <h2>{{facts.news_title}}</h2>
+                    <p>{{facts.list_text}}</p>
                     <br/>
 
                 </div> 
